# Truncation

./: .gitignore  README.md  channels_to_regions.m  combine_left_right.m  connection_ratio.m  create_and_save_matter_connection_map.m  display_the_sequences.m  draw_connection_circle.m  hemispheres_comparing_connection_map.m  plot_connectivity_differences.m  print_contiguous_percentage.m  shuffing.m  shuffling_the_channels.m  time_series_matrix.m
Python/: README.md  adjacency_matrix.py  connection_map_grey_matter.csv  connection_map_white_matter.csv  dba_daa.csv  dba_daa_1.csv  difference.csv  mean.csv  permutation.csv  plot_connectivity.py  pyproject.toml  selected_columns.csv  show_all_graph.py  test1.ipynb  test3.ipynb  test_0503.ipynb
Python/_old/: calculate_difference.py  main.py  plot_connectivity.py  test1.ipynb  test2.ipynb  verify.py
Python/data/: connection_matrix.json  regions_on_both_side_of_tp.csv
Python/data_output/: all_matter_density_actual.csv  all_matter_density_permute_region.csv  all_matter_density_permute_tp.csv  grey_matter_density_actual.csv  grey_matter_density_permute_region.csv  grey_matter_density_permute_tp.csv  white_matter_density_actual.csv  white_matter_density_permute_region.csv  white_matter_density_permute_tp.csv
Python/output_data/: combined_seizures.json  truncation_labels.json
Python/p_value_results/: Readme.md
Python/preprocessing/: combine_regions_with_same_name.py  extract_labels.py  truncated_vs_continuing.py
Python/truncation/: adjacency_matrix.py  cal_connection_difference.py  inter_con_.py  plot_connectivity.py
(+32 files in other folders)
